// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VmStatus vm /> renders correctly 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-off kubevirt-status__icon"
  />,
  "Off",
]
`;

exports[`<VmStatus vm pod /> renders correctly 0 (VM_STATUS_OFF) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-off kubevirt-status__icon"
  />,
  "Off",
]
`;

exports[`<VmStatus vm pod /> renders correctly 1 (VM_STATUS_RUNNING) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-on-running kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Running
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 2 (VM_STATUS_STARTING) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Starting
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 3 (VM_STATUS_STARTING) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Starting
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 4 (VM_STATUS_STARTING) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Starting
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 5 (VM_STATUS_POD_ERROR) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Pod error
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 6 (VM_STATUS_VMI_WAITING) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Pending
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 7 (VM_STATUS_VMI_WAITING) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Pending
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 8 (VM_STATUS_ERROR) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    VM Error
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 9 (VM_STATUS_ERROR) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    VM Error
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 10 (VM_STATUS_IMPORT_ERROR) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Import error
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 11 (VM_STATUS_POD_ERROR) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Pod error
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 12 (VM_STATUS_MIGRATING) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-migrating kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Migration
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 13 (VM_STATUS_RUNNING) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-on-running kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Running
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 14 (VM_STATUS_IMPORTING) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-import kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Importing
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 15 (VM_STATUS_IMPORT_ERROR) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Import error
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 16 (VM_STATUS_CONVERSION_IN_PROGRESS) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-import kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Importing (VMware)
  </button>
</span>
`;

exports[`<VmStatus vm pod /> renders correctly 17 (VM_STATUS_CONVERSION_FAILED) 1`] = `
<span
  class="kubevirt-status__popover"
>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <button
    class="kubevirt-status__button btn btn-link"
    type="button"
  >
    Import Error (VMware)
  </button>
</span>
`;

exports[`<VmStatuses vm pod /> renders correctly 0 (VM_STATUS_OFF) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-off kubevirt-status__icon"
  />
  Off
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 1 (VM_STATUS_RUNNING) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-on-running kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Running
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 2 (VM_STATUS_STARTING) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-pending kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Starting
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 3 (VM_STATUS_STARTING) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-pending kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Starting
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 4 (VM_STATUS_STARTING) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-pending kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Starting
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 5 (VM_STATUS_POD_ERROR) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-error-circle-o kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Pod error
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 6 (VM_STATUS_VMI_WAITING) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-pending kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Pending
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 7 (VM_STATUS_VMI_WAITING) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-pending kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Pending
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 8 (VM_STATUS_ERROR) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-error-circle-o kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      VM Error
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 9 (VM_STATUS_ERROR) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-error-circle-o kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      VM Error
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 10 (VM_STATUS_IMPORT_ERROR) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-error-circle-o kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Import error
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 11 (VM_STATUS_POD_ERROR) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-error-circle-o kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Pod error
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 12 (VM_STATUS_MIGRATING) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-migrating kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Migration
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 13 (VM_STATUS_RUNNING) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-on-running kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Running
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 14 (VM_STATUS_IMPORTING) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-import kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Importing
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 15 (VM_STATUS_IMPORT_ERROR) 1`] = `
Array [
  <div>
    <span
      class="kubevirt-status__popover"
    >
      <span
        aria-hidden="true"
        class="pficon pficon-import kubevirt-status__icon"
      />
      <button
        class="kubevirt-status__button btn btn-link"
        type="button"
      >
        Importing
      </button>
    </span>
  </div>,
  <div>
    <span
      class="kubevirt-status__popover"
    >
      <span
        aria-hidden="true"
        class="pficon pficon-error-circle-o kubevirt-status__icon"
      />
      <button
        class="kubevirt-status__button btn btn-link"
        type="button"
      >
        Import error
      </button>
    </span>
  </div>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly 16 (VM_STATUS_CONVERSION_IN_PROGRESS) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-import kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Importing (VMware)
    </button>
  </span>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 17 (VM_STATUS_CONVERSION_FAILED) 1`] = `
<div>
  <span
    class="kubevirt-status__popover"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-error-circle-o kubevirt-status__icon"
    />
    <button
      class="kubevirt-status__button btn btn-link"
      type="button"
    >
      Import Error (VMware)
    </button>
  </span>
</div>
`;
